# booking_manicur_bot_v2

./: .env.example  README.md  booking_bot.db  pyproject.toml  requirements.txt
app/: __init__.py  config.py  formatters.py  main.py
app/admin/: __init__.py  keyboards.py  service.py  states.py
app/admin/handlers/: __init__.py  panel.py  panel_schedule_part.tmp
app/bot/: dispatcher.py  keyboards.py  service.py  utils.py
app/bot/handlers/: __init__.py  start.py
app/db/: base.py  session.py
app/models/: __init__.py  admin.py  booking.py  client.py  enums.py  master.py  notification.py  schedule.py  service.py  setting.py
app/notifications/: scheduler.py  service.py
app/services/: booking_slots.py
docs/: architecture.md
tests/: test_booking_slots.py
