[project]
name = "booking-manicure-bot"
version = "0.1.0"
description = "Telegram bot for manicure bookings with admin workflows"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0,<4.0.0",
    "sqlalchemy>=2.0.39,<3.0.0",
    "aiosqlite>=0.21.0,<1.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "apscheduler>=3.11.0,<4.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
